@@ -142,7 +142,8 @@ class Smarty_Template_Compiled extends Smarty_Template_Resource_Base
             }
             $_template->smarty->compile_check = $compileCheck;
         } else {
-            include($_template->compiled->filepath);
+            $_template->mustCompile = true;
+            @include($_template->compiled->filepath);
             if ($_template->mustCompile) {
                 $this->compileTemplateSource($_template);
                 $compileCheck = $_template->smarty->compile_check;
@@ -155,7 +156,8 @@ class Smarty_Template_Compiled extends Smarty_Template_Resource_Base
             !empty($_template->parent->compiled->includes) &&
             $_template->smarty->resource_cache_mode & Smarty::RESOURCE_CACHE_AUTOMATIC &&
             !$_template->source->handler->recompiled && $_template->source->type != 'string' &&
-            (!isset($_template->smarty->_cache['template_objects']) || !isset($_template->smarty->_cache['template_objects'][$_template->_getTemplateId()]))
+            (!isset($_template->smarty->_cache['template_objects']) ||
+                !isset($_template->smarty->_cache['template_objects'][$_template->_getTemplateId()]))
         ) {
             foreach ($_template->parent->compiled->includes as $key => $count) {
                 $_template->compiled->includes[$key] =
@@ -164,7 +166,8 @@ class Smarty_Template_Compiled extends Smarty_Template_Resource_Base
             }
             $key = $_template->source->type . ':' . $_template->source->name;
             if (isset($_template->compiled->includes[$key]) && $_template->compiled->includes[$key] > 1) {
-                $_template->smarty->_cache['template_objects'][isset($_template->templateId) ? $_template->templateId : $_template->_getTemplateId()] = $_template;
+                $_template->smarty->_cache['template_objects'][isset($_template->templateId) ? $_template->templateId :
+                    $_template->_getTemplateId()] = $_template;
             }
         }
         $this->processed = true;
@@ -183,7 +186,7 @@ class Smarty_Template_Compiled extends Smarty_Template_Resource_Base
         }
         $_smarty_tpl = $_template;
         if (strpos(phpversion(), 'hhvm') !== false) {
-            Smarty_Internal_Extension_Hhvm::includeHhvm($_template, $_template->compiled->filepath);
+            $_template->smarty->ext->_hhvm->includeHhvm($_template, $_template->compiled->filepath);
         } else {
             include($_template->compiled->filepath);
         }
@@ -277,8 +280,7 @@ class Smarty_Template_Compiled extends Smarty_Template_Resource_Base
     public function write(Smarty_Internal_Template $_template, $code)
     {
         if (!$_template->source->handler->recompiled) {
-            $obj = new Smarty_Internal_Write_File();
-            if ($obj->writeFile($this->filepath, $code, $_template->smarty) === true) {
+            if ($_template->smarty->ext->_writeFile->writeFile($this->filepath, $code, $_template->smarty) === true) {
                 $this->timestamp = $this->exists = is_file($this->filepath);
                 if ($this->exists) {
                     $this->timestamp = filemtime($this->filepath);
