@@ -1,6 +1,7 @@
 ﻿ ===== 3.1.28-dev===== (xx.xx.2015)
  24.10.2015
   - new extension handler to load functions when called
+  - improve recovery from ivalid compiled template code
   
  21.10.2015
   - move some code into runtime extensions
